Add poller (non-WS) GET logic. Cosmetic.
(feature-continuation-token-pagination else feature-swaggerenum else develop)
