# src/lockss/pyclient/poller/models/__init__.py
@@ -22,26 +22,26 @@ from lockss.pyclient.poller.models.export_file_type_enum import ExportFileTypeEn
 from lockss.pyclient.poller.models.export_filename_translation_enum import ExportFilenameTranslationEnum
 from lockss.pyclient.poller.models.hasher_ws_params import HasherWsParams
 from lockss.pyclient.poller.models.link_desc import LinkDesc
-from lockss.pyclient.poller.models.page_desc import PageDesc
+from lockss.pyclient.poller.models.page_info import PageInfo
 from lockss.pyclient.poller.models.peer_data import PeerData
 from lockss.pyclient.poller.models.peer_ws_result import PeerWsResult
 from lockss.pyclient.poller.models.poll_desc import PollDesc
 from lockss.pyclient.poller.models.poll_variant_enum import PollVariantEnum
 from lockss.pyclient.poller.models.poll_ws_result import PollWsResult
 from lockss.pyclient.poller.models.poller_detail import PollerDetail
-from lockss.pyclient.poller.models.poller_pager import PollerPager
+from lockss.pyclient.poller.models.poller_page_info import PollerPageInfo
 from lockss.pyclient.poller.models.poller_summary import PollerSummary
 from lockss.pyclient.poller.models.repair_data import RepairData
-from lockss.pyclient.poller.models.repair_pager import RepairPager
+from lockss.pyclient.poller.models.repair_page_info import RepairPageInfo
 from lockss.pyclient.poller.models.repair_queue import RepairQueue
 from lockss.pyclient.poller.models.repair_type_enum import RepairTypeEnum
 from lockss.pyclient.poller.models.repository_space_ws_result import RepositorySpaceWsResult
 from lockss.pyclient.poller.models.repository_ws_result import RepositoryWsResult
 from lockss.pyclient.poller.models.tally_data import TallyData
 from lockss.pyclient.poller.models.tally_type_enum import TallyTypeEnum
-from lockss.pyclient.poller.models.url_pager import UrlPager
+from lockss.pyclient.poller.models.url_page_info import UrlPageInfo
 from lockss.pyclient.poller.models.vote_ws_result import VoteWsResult
 from lockss.pyclient.poller.models.voter_detail import VoterDetail
-from lockss.pyclient.poller.models.voter_pager import VoterPager
+from lockss.pyclient.poller.models.voter_page_info import VoterPageInfo
 from lockss.pyclient.poller.models.voter_summary import VoterSummary
 from lockss.pyclient.poller.models.voter_urls_enum import VoterUrlsEnum
