# src/lockss/pyclient/poller/models/voter_page_info.py
@@ -1,0 +1,140 @@
+# coding: utf-8
+
+"""
+    LOCKSS Poller Service REST API
+
+    REST API of the LOCKSS Poller Service  # noqa: E501
+
+    OpenAPI spec version: 2.0.0
+    Contact: lockss-support@lockss.org
+    Generated by: https://github.com/swagger-api/swagger-codegen.git
+"""
+
+import pprint
+import re  # noqa: F401
+
+import six
+
+class VoterPageInfo(object):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    """
+    Attributes:
+      swagger_types (dict): The key is attribute name
+                            and the value is attribute type.
+      attribute_map (dict): The key is attribute name
+                            and the value is json key in definition.
+    """
+    swagger_types = {
+        'polls': 'list[VoterSummary]',
+        'page_info': 'PageInfo'
+    }
+
+    attribute_map = {
+        'polls': 'polls',
+        'page_info': 'pageInfo'
+    }
+
+    def __init__(self, polls=None, page_info=None):  # noqa: E501
+        """VoterPageInfo - a model defined in Swagger"""  # noqa: E501
+        self._polls = None
+        self._page_info = None
+        self.discriminator = None
+        self.polls = polls
+        self.page_info = page_info
+
+    @property
+    def polls(self):
+        """Gets the polls of this VoterPageInfo.  # noqa: E501
+
+        The poll summaries included in the page  # noqa: E501
+
+        :return: The polls of this VoterPageInfo.  # noqa: E501
+        :rtype: list[VoterSummary]
+        """
+        return self._polls
+
+    @polls.setter
+    def polls(self, polls):
+        """Sets the polls of this VoterPageInfo.
+
+        The poll summaries included in the page  # noqa: E501
+
+        :param polls: The polls of this VoterPageInfo.  # noqa: E501
+        :type: list[VoterSummary]
+        """
+        if polls is None:
+            raise ValueError("Invalid value for `polls`, must not be `None`")  # noqa: E501
+
+        self._polls = polls
+
+    @property
+    def page_info(self):
+        """Gets the page_info of this VoterPageInfo.  # noqa: E501
+
+
+        :return: The page_info of this VoterPageInfo.  # noqa: E501
+        :rtype: PageInfo
+        """
+        return self._page_info
+
+    @page_info.setter
+    def page_info(self, page_info):
+        """Sets the page_info of this VoterPageInfo.
+
+
+        :param page_info: The page_info of this VoterPageInfo.  # noqa: E501
+        :type: PageInfo
+        """
+        if page_info is None:
+            raise ValueError("Invalid value for `page_info`, must not be `None`")  # noqa: E501
+
+        self._page_info = page_info
+
+    def to_dict(self):
+        """Returns the model properties as a dict"""
+        result = {}
+
+        for attr, _ in six.iteritems(self.swagger_types):
+            value = getattr(self, attr)
+            if isinstance(value, list):
+                result[attr] = list(map(
+                    lambda x: x.to_dict() if hasattr(x, "to_dict") else x,
+                    value
+                ))
+            elif hasattr(value, "to_dict"):
+                result[attr] = value.to_dict()
+            elif isinstance(value, dict):
+                result[attr] = dict(map(
+                    lambda item: (item[0], item[1].to_dict())
+                    if hasattr(item[1], "to_dict") else item,
+                    value.items()
+                ))
+            else:
+                result[attr] = value
+        if issubclass(VoterPageInfo, dict):
+            for key, value in self.items():
+                result[key] = value
+
+        return result
+
+    def to_str(self):
+        """Returns the string representation of the model"""
+        return pprint.pformat(self.to_dict())
+
+    def __repr__(self):
+        """For `print` and `pprint`"""
+        return self.to_str()
+
+    def __eq__(self, other):
+        """Returns true if both objects are equal"""
+        if not isinstance(other, VoterPageInfo):
+            return False
+
+        return self.__dict__ == other.__dict__
+
+    def __ne__(self, other):
+        """Returns true if both objects are not equal"""
+        return not self == other
